# trading-algorithm

./: .gitignore  DAILY_TRADING_SETUP.md  EMAIL_NOTIFICATIONS_SETUP.md  GITHUB_ACTIONS_SETUP.md  LICENSE  PROJECT_ORGANIZATION.md  README.md  arr.py  backtesting.py  new.txt  pyproject.toml  setup_dynamodb.sh  tecl_history.csv  tecl_history4.csv  tecl_history5.csv  view_dynamodb_data.py
.claude/: settings.local.json
.github/workflows/: daily-trading-dst.yml  daily-trading-dst.yml.disabled  daily-trading.yml
scripts/: README.md  rotate_logs.sh  run_daily_trader.sh  run_trader.sh  setup_monitoring.sh
tests/: README.md  test_alpaca_credentials.py  test_alpha_vantage_vix.py  test_buy_sell.py  test_data_availability.py  test_dynamodb.py  test_finnhub_vix.py  test_full_flow.py  test_yahoo_vix.py
trading_algorithm/: __init__.py  arr.py  backtesting.py  daily_trader.py  dynamodb_handler.py  live_trader.py  scheduler.py
